# kids-content-generator

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  api.py  graph.py  index.html  main.py  mcp_server.py  nodes.py  pyproject.toml  video_generator.py
.github/workflows/: deploy.yml
