[project]
name = "kids-content-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "edge-tts>=7.2.8",
    "elevenlabs>=2.44.0",
    "fastapi>=0.136.1",
    "google-api-python-client>=2.194.0",
    "google-auth-httplib2>=0.3.1",
    "google-auth-oauthlib>=1.3.1",
    "google-cloud-storage>=3.4.1",
    "google-genai>=1.73.1",
    "google-generativeai>=0.8.6",
    "gtts>=2.5.4",
    "huggingface-hub>=1.12.0",
    "langchain-groq>=1.1.2",
    "langchain-mcp-adapters>=0.2.2",
    "langgraph>=1.1.9",
    "mcp>=1.27.0",
    "moviepy>=2.2.1",
    "mutagen>=1.47.0",
    "pillow>=11.3.0",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "tavily-python>=0.7.23",
    "google-cloud-aiplatform>=1.60.0",
]
